data_runs/logs/compile_err.log
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:8: baseline] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:18: opt_div] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:27: opt_invariant] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:36: opt_invariant2] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:45: opt_inversion] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:8: baseline] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:18: opt_div] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:27: opt_invariant] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:36: opt_invariant2] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:45: opt_inversion] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:8: baseline] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:18: opt_div] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:27: opt_invariant] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:36: opt_invariant2] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:45: opt_inversion] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:8: baseline] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:18: opt_div] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:27: opt_invariant] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:36: opt_invariant2] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:45: opt_inversion] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:8: baseline] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:18: opt_div] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:27: opt_invariant] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:36: opt_invariant2] Error 1
kernel.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
make: *** [Makefile:45: opt_inversion] Error 1
make: *** [Makefile:20: opt_div] Interrompre
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
kernel.c: In function ‘opt_invariant2’:
kernel.c:62:6: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
   62 |      sleep(1);
      |      ^~~~~
